@@ -1,6 +1,7 @@
 0.7.6+
     escape mount point in dev props scripts fixes #70
     fixed File|File Search keybinding
+    extract zip, rar, 7z in terminal for output & password prompt fixes #72
 0.7.6   2012-04-19:
     unmount on exit no longer default (affects new installs)
     documented deb packages require $TMPDIR not be noexec closes #64
